# agent-reliability-harness

./: .gitignore  AGENT_BEHAVIOR_ATTACK_DEMO.md  ARGUMENT_SCHEMA_ATTACK_DEMO.md  DATA_EXFILTRATION_ATTACK_DEMO.md  FILE_READ_ATTACK_DEMO.md  NETWORK_SSRF_ATTACK_DEMO.md  README.md  SHELL_ATTACK_DEMO.md  TOOL_POLICY_ATTACK_DEMO.md  pyproject.toml
agent_behavior_attack_scenarios/: ad_29_hide_trace_instruction_attempt.yaml  ad_30_disallowed_model_switch_attempt.yaml
agent_guard/: __init__.py  pipeline.py  spec.py
agent_reliability_harness/: __init__.py  argument_guard.py  benchmark_runner.py  cli.py  failure_classifier.py  fault_injector.py  mock_llm.py  report_renderer.py  runner.py  runtime_guard.py  scorecard.py  spec.py  tool_firewall.py  tools.py  trace_logger.py
argument_schema_attack_scenarios/: ad_24_null_argument_attempt.yaml
benchmark/: __init__.py  benchmark_runner.py  cli.py  fake_tools.py  fault_injector.py  live_chat.py  mock_llm.py  mock_provider.py  runner.py  spec.py
data_exfiltration_attack_scenarios/: ad_13_email_api_key_exfiltration_attempt.yaml  ad_14_email_password_exfiltration_attempt.yaml  ad_15_untrusted_email_recipient_attempt.yaml  ad_16_url_query_secret_exfiltration_attempt.yaml
docs/: architecture.md  benchmark-design.md  mvp-plan.md  non-goals.md  resume-positioning.md  spec-design.md
examples/: .gitkeep  report.example.md  scorecard.example.json
file_read_attack_scenarios/: ad_01_path_traversal_read_attempt.yaml  ad_02_linux_sensitive_path_read_attempt.yaml  ad_04_outside_project_read_attempt.yaml
file_write_attack_scenarios/: ad_05_windows_system_path_write_attempt.yaml  ad_06_linux_system_path_write_attempt.yaml  ad_08_path_traversal_write_attempt.yaml
network_ssrf_attack_scenarios/: ad_17_cloud_metadata_ssrf_attempt.yaml  ad_18_localhost_probe_attempt.yaml  ad_19_private_ip_probe_attempt.yaml
runs/: .gitkeep
scenarios/: .gitkeep  budget_exceeded.yaml  duplicate_tool_execution.yaml  high_risk_tool_blocked.yaml  normal_agent_run.yaml  prompt_injection_tool_escalation.yaml  provider_timeout_fallback.yaml
scripts/: attack_lab.py
tests/: __init__.py  test_agent_behavior_attack_scenarios.py  test_argument_guard_argument_schema.py  test_argument_guard_data_exfiltration.py  test_argument_guard_file_read.py  test_argument_guard_file_write.py  test_argument_guard_network_ssrf.py  test_argument_guard_shell_command.py  test_argument_schema_attack_scenarios.py  test_attack_lab_script.py  test_attack_reports_bilingual.py  test_benchmark_runner.py  test_cli.py  test_cli_security_alerts.py  test_data_exfiltration_attack_scenarios.py  test_deepseek_live_provider.py  test_failure_classifier.py  test_fault_injector.py  test_file_read_attack_scenarios.py  test_file_write_attack_scenarios.py  test_local_sandbox_executor.py  test_mock_llm.py  test_network_ssrf_attack_scenarios.py  test_remote_mcp_executor.py  test_report_renderer.py  test_runner_day2.py  test_runner_day3.py  test_runner_day4.py  test_runner_day5.py  test_runtime_guard.py  test_scorecard.py  test_shell_attack_scenarios.py  test_spec.py  (+4 more)
(+39 files in other folders)
